# proc-server

./: .gitignore  .rustc_info.json  .travis.yml  Cargo.toml  Dockerfile  LICENSE  README.md  backend.profdata  lcov.info  package-lock.json  skaffold.yaml
.github/workflows/: backend_db_integration_test.yaml
backend/: .env  .travis.yml  Cargo.toml  Dockerfile  Nginx.conf  Rocket.toml  running_script.sh
backend/.cargo/: config.toml
backend/.github/workflows/: db_integration_test.yaml
backend/k8s/: deployment.yaml  service.yaml
backend/migrations/2021-07-15-125948_create_pages/: down.sql  up.sql
backend/migrations/2024-05-15-072339_create_pages/: up.sql
backend/model/: Cargo.toml
backend/model/src/: lib.rs
backend/page_backend/src/: main.rs
backend/page_backend/src/api/: page.rs
backend/page_backend/src/models/: db_page.rs
backend/page_gateway/: Cargo.toml
backend/page_gateway/resources/test/: array.json
backend/page_gateway/src/: main.rs
backend/page_gateway/src/external_api/: page.rs
backend/src/: main.rs  schema.rs
backend/src/api/: page.rs
backend/src/api_pages/: controller.rs  db_entity.rs  dto.rs  entity.rs  mod.rs
backend/src/models/: db_page.rs  mod.rs  page.rs
charts/page-backend/: Chart.yaml  values.yaml
charts/page-backend/templates/: deployment.yaml  service.yaml
charts/page-frontend/: Chart.yaml  values.yaml
charts/page-frontend/templates/: service.yaml
frontend/: .eslintignore  .eslintrc.js  .eslintrc.json  .gitignore  .nycrc  Dockerfile  Nginx.conf  README.md  _quasar.conf.js  babel.config.js  cypress.config.ts  jest.config.js  line_awesome_scraper.py  package-lock.json  package.json  quasar.conf.js  quasar.config.ts  quasar.config.ts.temporary.compiled.1715970160734.mjs  quasar.extensions.json  tsconfig.json  vitest.config.mts
frontend/.nyc_output/: out.json
frontend/k8s/: deployment.yaml  service.yaml
frontend/src/: App.vue  ReteVueRenderPlugin.d.ts  index.template.html  router.vitest.test.ts  shims-tiptap.d.ts  vue-grid-layout.d.ts  vue-resize-directive.d.ts  worker-loader.d.ts
frontend/src-electron/main-process/: electron-main.js
frontend/src-server/: .env  Cargo.toml  lcov.info  test_form.json  test_view.json
frontend/src-server/migrations/2021-04-03-141550_create_tables/: down.sql  up.sql
frontend/src-server/src/: db.rs  form.rs  layout.rs  layout_api.rs  main.rs  page.rs  page_api.rs  page_connection.rs  page_connection_api.rs  schema.rs  temp_flow.rs  temp_flow_api.rs  user.rs  user_api.rs  view.rs
frontend/src/__tests__/: App.test.ts
frontend/src/boot/: ui-builder.ts
frontend/src/components/: ChartWidget.vue  DynamicPage.vue  FlowGraphNodesList.vue  FlowGraphWidget.vue  FormWidget.vue  IdeWidget.vue  ImageWidget.vue  InputPin.vue  ListWidget.vue  MapWidget.vue  NestedDraggable.vue  Pagelist.vue  StyleSelector.vue  TableWidget.vue  TextWidget.vue  TodoWidget.vue  ToggleButton.vue  Widget.vue
frontend/src/composables/: useChangeableComputedAttributeModel.ts  useChangleableComputedAttributeModel.ts  useColumValidator.ts  useComputedAttributeModel.ts  useDrag.ts  useDrag.vitest.test.ts  useDrop.ts
kubernetes/: mimayu-namespace.yaml
model/: Cargo.toml
model/src/: lib.rs
page_backend/: Cargo.toml  Rocket.toml
page_backend/src/: main.rs
page_backend/src/api/: page.rs
page_backend/src/models/: db_page.rs  mod.rs  page.rs  schema.rs
page_gateway/: Cargo.toml
page_gateway/resources/test/: invalid.json  single.json
page_gateway/src/: main.rs
page_gateway/src/external_api/: page.rs
src/: main.rs  tests.rs
src/external_api/: page.rs
src/models/: page.rs
(+211 files in other folders)
