[package]
name = "proc-server"
version = "0.1.0"
authors = ["gilengel <gil.engel@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", branch="v0.5-rc"}