[package]
name = "backend"
version = "0.1.0"
edition = "2018"

[dependencies]
diesel = { version = "2.1.6", features = ["postgres", "r2d2", "numeric", "chrono", "serde_json" ]}
diesel_migrations = "2.1.0"
dotenv = "0.15.0"
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.126", default-features = true, features = ["derive"] }
serde_derive = "1.0.126"
serde_json = "1.0.64"
openssl = "*"
openssl-probe = "0.1.2"
rocket = { version="0.5.0", features=["json", "uuid"] }
rocket_sync_db_pools = {version = "0.1.0", features=["diesel_postgres_pool", "postgres_pool"] }
rocket_okapi = { version="*", features = [ "swagger", "rapidoc" ] }

[dev-dependencies]
rand = "0.8.4"
serial_test = "3.1.1"

#[[bin]]
#name = "page_backend"
#path = "src/main.rs"