[package]
name = "page_gateway"
version = "0.1.0"
edition = "2018"

[dependencies]
diesel = { version = "1.4.7", features = ["postgres", "r2d2", "numeric", "uuidv07", "chrono", "serde_json" ]}
diesel_migrations = "1.4"
dotenv = "0.15.0"
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.126", default-features = true, features = ["derive"] }
serde_derive = "1.0.126"
serde_json = "1.0.64"

rocket = { version="0.5.0-rc.1", features=["json", "uuid"] }

rocket_sync_db_pools = {version = "0.1.0-rc.1", features=["diesel_postgres_pool", "postgres_pool"] }

model = { path = "../model" }

[dev-dependencies]
rand = "0.8.4"
serial_test = "0.5.1"