[package]
name = "proc-server"
version = "0.1.0"
authors = ["gilengel <gil.engel@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", default-features = true, features = ["derive"] }
serde_derive = "1.0.125"
serde_json = "1.0.64"

rocket = { git = "https://github.com/SergioBenitez/Rocket.git", branch="v0.5-rc", features=["json", "uuid"]  }
mockito = "0.30.0"
reqwest = { version = "0.11.4", features = ["json"] }
chrono = { version = "0.4.19", features = ["serde"] }
model = { path = "../model" }