[package]
name = "model"
version = "0.1.0"
edition = "2018"

[dependencies]
serde = { version = "1.0.126", default-features = true, features = ["derive"] }
serde_derive = "1.0.125"
serde_json = "1.0.64"
chrono = { version = "0.4.19", features = ["serde"] }

[lib]
name = "model"
crate-type = ["lib"]
bench = false
path = "src/lib.rs"