[package]
name = "rust-server"
version = "0.1.0"
authors = ["Gil Engel <gil.engel@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.125", default-features = true, features = ["derive"] }
serde_derive = "1.0.125"
serde_json = "1.0.64"

rocket = { version = "0.4.7" }
rocket_contrib = { version = "0.4.7", default-features = false, features = ["json"] }

diesel = { version = "1.4.6", features = ["postgres", "r2d2", "numeric", "uuidv07", "chrono", "serde_json" ]}
log = "0.4.14"
chrono = { version = "0.4.19", features = ["serde"] }
